; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/lsm1/extr_lsm_ckpt.c_ckptLoadId.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/lsm1/extr_lsm_ckpt.c_ckptLoadId.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CKPT_HDR_ID_MSW = common dso_local global i32 0, align 4
@CKPT_HDR_ID_LSW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ckptLoadId to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ckptLoadId(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %3, align 4
  %6 = load i32*, i32** %2, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %27

8:                                                ; preds = %1
  %9 = load i32*, i32** %2, align 8
  %10 = call i32* @lsmFsMetaPageData(i32* %9, i32* %4)
  store i32* %10, i32** %5, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* @CKPT_HDR_ID_MSW, align 4
  %13 = mul nsw i32 %12, 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i32, i32* %11, i64 %14
  %16 = call i64 @lsmGetU32(i32* %15)
  %17 = trunc i64 %16 to i32
  %18 = shl i32 %17, 32
  %19 = load i32*, i32** %5, align 8
  %20 = load i32, i32* @CKPT_HDR_ID_LSW, align 4
  %21 = mul nsw i32 %20, 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i32, i32* %19, i64 %22
  %24 = call i64 @lsmGetU32(i32* %23)
  %25 = trunc i64 %24 to i32
  %26 = add nsw i32 %18, %25
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %8, %1
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32* @lsmFsMetaPageData(i32*, i32*) #1

declare dso_local i64 @lsmGetU32(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
